static/css/viewListing.css
* {
    box-sizing: border-box;
}


body {
    margin: 10px 0 85px 0;
    overflow-x: hidden;
    background-color: #F7F7F7;
    font-family: 'Roboto', sans-serif;
}

section.top{
    display: flex;
    flex-direction: column;
    align-items: center;
}

div.imgFrame {
    width: 350px;
    height: 250px;
    background-color: rgb(236, 233, 233);
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.postImage{
width: 80%;
height: auto;
border-radius: 30px;
}

div.lineOne{
    margin-left: 20px;
    display: flex;
    flex-direction: row;
    column-gap: 20px;
    margin-bottom: -20px;
    font-size: large;
}

div.lineThree{
    margin-left: 20px;
}

p.date{
   color:#858585;
}

p.price{
    color:#858585;
}

p.location{
    color:#3E3E3E;
}

p.seller{
    margin-left: 20px;
}

.sellerName{
    text-decoration: none;
    color: #DE5A60;
}
img.icon{
    width: 36px;
    height: 36px;
    margin-left: 20px;
}

a.all{
    display: flex;
    flex-direction: column;
    text-decoration: none;
    color: black;
}

div.btnFrame{
    margin-top: 10px;
    display: flex;
    flex-direction: row;
    column-gap: 28px;
 
}

div.card{
    background-color: white;
    border-radius: 10%;
    width: 300px;
    height: 165px;
    position: absolute;
    top:50%;
    left:50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

div.card > strong{
   padding: 2px;
}

div.card > p{
    color:#858585;
    margin-top: -1px;
   
    
}

button {
    margin: 5px;
}

button.no{
    color: white;
    background-color: #3E3E3E;
    border: none;
    width: 80px;
    height: 25px;
    border-radius: 5px;
}

button.yes{
    color: white;
    background-color: #DE5A60;
    border:none;
    width: 140px;
    height: 25px;
    border-radius: 5px;
}

div.card.disapear{
    display: none;
}

div.card.displayNone{
    display: none;
}

